# Unum

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: Demo.u  Main.c  Unum.c  Unum.h
src/libraries/: Math.u  UGlobal.h  UIO.h  UMath.h
src/libraries/bindings/: Global.u  IO.u
